plugins {
    id 'java'
    id 'application'
    id 'jacoco'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.withType(JavaExec) {
    jvmArgs('-Dfile.encoding=UTF-8',
            '-Dsun.stdout.encoding=UTF-8',
            '-Dsun.stderr.encoding=UTF-8')
}

application {
    mainClass = 'ru.nsu.aimykhelov.task112.BlackjackGame'
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5（Jupiter）
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.80  // 80% 指令覆盖率
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification